fix #11 with shopping cart example